tests/neg/parser-stability-4.scala
class x0{
      def x0: x0 = (x0 => x0) => x0)  // error // error
// error